--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
     border-radius: 8px;
     padding: 20px;
     text-align: center;
-    max-width: 400px; /* Adjust the maximum width as needed */
+    max-width: 400px;
     margin: 0 auto;
   }
   
